# src/routes/user.routes.js
@@ -1,12 +1,14 @@
 const express = require('express');
-const { updateUser, deleteUser, getUserById, getAllActiveUsers } = require('../controllers/user-controller');
+const { updateUser, deleteUser, getUserById, getAllActiveUsers, createUser } = require('../controllers/user-controller');
 const { authenticateToken } = require('../middlewares/auth-middleware');
 const { isAdmin } = require('../middlewares/role.middleware');
 
 const router = express.Router();
 
-router.get('/:id', authenticateToken, getUserById);
-router.get('/', authenticateToken, getAllActiveUsers);
+router.post('/', authenticateToken, isAdmin, createUser);
+
+router.get('/:id', authenticateToken, isAdmin, getUserById);
+router.get('/', authenticateToken, isAdmin, getAllActiveUsers);
 
 router.patch('/', authenticateToken, updateUser);
 router.patch('/:id', authenticateToken, isAdmin, updateUser);
